translitName implemented, but hook not

--- a/MultiLanguage/languages/RU/dictionaries/Events.json
+++ b/MultiLanguage/languages/RU/dictionaries/Events.json
@@ -682,7 +682,7 @@
   "I actually prefer the look of raw, unadultered wood.": "Я предпочитаю вид чистой, нетронутой древесины.",
   "(creepy) May I have a kiss?": "(подкрасться) Можно мне поцелуй?",
   "I first visited this valley as a little girl, while on vacation with my parents.": "Я впервые посетила долину ещё маленькой девочкой, во время путешествия с моими родителями.",
-  "I knew I had to come back some day... This place has great artistic potential!": "Я знала что обязательно вернусь когда нибудь... у этого места огромный художественный потенциал!",
+  "I knew I had to come back some day... This place has great artistic potential!": "Я знала что обязательно вернусь когда-нибудь... у этого места огромный художественный потенциал!",
   "Although, I have to admit... It's not easy to pay the bills as an artist.": "Но всё же, мне стоит признать... что платить по счетам художнику весьма сложно.",
   "Why don't you have an art show in town?": "Почему бы тебе не организовать выставку в городе?",
   "Why don't you sell your art on the internet?": "Почему бы тебе не начать продавать свои скульптуры через интернет?",
@@ -783,7 +783,7 @@
   "What a beautiful night! Maru showed me something new...": "Какая чудесная ночь! Мару показала мне кое что новое...",
   "__comment": "Linus",
   "@player! Come stand next to the firepit. It feels great.": "@player! Подойди к костру. От него исходит такой приятный жар.",
-  "I was hoping you'd come by sometime.": "Я надеялся, что ты когда нибудь всё таки заглянешь ко мне на огонёк.",
+  "I was hoping you'd come by sometime.": "Я надеялся, что ты когда-нибудь всё таки заглянешь ко мне на огонёк.",
   "I wanted to say sorry for mistrusting you at first.": "Я хотел извинится за то, что не доверял тебе по началу.",
   "Most people don't treat me well, so I've learned to be cautious.": "Большинство людей относятся ко мне негативно, так что я научился быть осторожным.",
   "But you've been uncommonly nice to me. You're a unique person.": "Но ты так непривычно добр ко мне. Ты необычный человек.^Но ты так непривычно добра ко мне. Ты необычный человек.",
@@ -804,7 +804,7 @@
   "What, you haven't seen my motorcycle before? Hmmm... I guess I haven't shown it to you.": "Что, ты ещё не видел мой мотоцикл? Хммм... наверное потому, что я тебе его ещё не показал.^Что, ты ещё не видела мой мотоцикл? Хммм... наверное потому, что я тебе его ещё не показал.",
   "Sometimes, after sundown, I make the long ride out of Stardew Valley...": "Иногда, после захода солнца, я выезжаю покататься из долины...",
   "There's nothing else like it, blazing along the empty stretch of road toward the faint city glow...": "Нет ни чего что может сравниться с этим чувством, когда ты летишь по пустой дороги на встречу огням большого города...",
-  "Once I've saved up enough money, I'm going to head out on my own... to the city and beyond. Just me and my bike.": "Когда нибудь я накоплю достаточно денег и отправлюсь по своему пути... через город, дальше, пока есть дорога. Только я  и мой байк.",
+  "Once I've saved up enough money, I'm going to head out on my own... to the city and beyond. Just me and my bike.": "Когда-нибудь я накоплю достаточно денег и отправлюсь по своему пути... через город, дальше, пока есть дорога. Только я  и мой байк.",
   "There we go, oil's changed.": "Вот так, смена масла.",
   "Hey... Maybe I'll let you ride sometime, if you want.": "Эй... может я возьму тебя как-нибудь с собой, если конечно хочешь.",
   "Hey... maybe I'll take you for a ride some day.": "Эй... может я возьму тебя как-нибудь с собой.",
@@ -1120,7 +1120,7 @@
   "Thanks for your help, @player.": "Спасибо за помощь, @player.",
   "__comment": "Robin",
   "Hi @player. I was just cleaning some dust off my saw.": "Привет @player. Я только счищала пыль со своей пилы.",
-  "Have you ever made anything out of wood, @player?": "Тебе приходилось что нибудь мастерить из дерева, @player?",
+  "Have you ever made anything out of wood, @player?": "Тебе приходилось что-нибудь мастерить из дерева, @player?",
   "Yes": "Да",
   "No": "Нет",
   "I think we've become good enough friends that I can trust you with my carpentry secrets!": "\"Думаю мы с тобой довольно хорошие друзья, так что давай ка я обучу тебя своим столярным секретам!",
