--- a/MultiLanguage/languages/RU/dictionaries/Quests.json
+++ b/MultiLanguage/languages/RU/dictionaries/Quests.json
@@ -97,10 +97,10 @@
   "Demetrius needs a fresh melon for his research.": "Деметриус нуждается в свежей дыни для его исследования.",
   "Bring Demetrius a melon.": "Принести Деметриусу дыню.",
   "This is perfect! It's just what I need for my research. It's going to be hard not to eat it! Thanks a bunch.": "Это потрясающе! Это именно то, что нужно для моих исследований. Будет трудно не съесть его! Огромное спасибо.",
-  "Knee Therapy": "Колено терапия",
+  "Knee Therapy": "Коленотерапия",
   "George needs a hot pepper to soothe his aching knee.": "Джордж нуждается в остром перце, чтобы успокоить свое больное колено.",
   "Bring George a Hot Pepper.": "Отдать Джорджу острый Перец.",
-  "Took you long enough... hmmph... Well it's good and spicy at least. Thanks.": "Я ждал Вас достаточно долго... Хммм... Ну, он хороший и пряный по крайней мере. Спасибо.",
+  "Took you long enough... hmmph... Well it's good and spicy at least. Thanks.": "Я ждал тебя достаточно долго... Хммм... Ну, он по крайней мере хороший и острый. Спасибо.",
   "Cow's Delight": "Коровий восторг",
   "Marnie wants to give her cows a special treat. She's asking for a single bunch of amaranth.": "Марни хочет, чтобы коровы получили специальное угощение. Она просит одну кучу амаранта.",
   "Bring Marnie one bunch of amaranth.": "Принести Марни одну кучу амаранта.",
