--- a/MultiLanguage/languages/RU/dictionaries/_GameQuests.json
+++ b/MultiLanguage/languages/RU/dictionaries/_GameQuests.json
@@ -82,8 +82,8 @@
   "Feeling gloomy... an @key might cheer me up.@newline     -Sebastian@newline@newline- @numberg on delivery@newline- @key": "Меня охватила печаль... @key может поднять мне настроение.@newline -Себастьян @newline@newline- @numberg за доставку@newline- @key",
   "I need a @key for a @key I'm making. @newline        -@key@newline@newline- @numberg on delivery@newline- @key": "Мне нужен @key для @key Которую я готовлю. @newline     -@key@newline@newline- @numberg при доставке@newline- @key",
   "I need an @key for a @key I'm making. @newline        -@key@newline@newline- @numberg on delivery@newline- @key": "Мне нужен @key для @key Которую я готовлю. @newline     -@key@newline@newline- @numberg при доставке@newline- @key",
-  "I need a @key for a @key I'm making. Could someone bring me one?@newline        -@key@newline@newline- @numberg on delivery@newline- @key": "Мне нужен @key, что бы приготовить @key. Кто нибудь может поделится со мной этим? @newline     -@key@newline@newline- @numberg при доставке@newline- @key",
-  "I need an @key for a @key I'm making. Could someone bring me one?@newline        -@key@newline@newline- @numberg on delivery@newline- @key": "Мне нужен @key, что бы приготовить @key. Кто нибудь может поделится со мной этим? @newline     -@key@newline@newline- @numberg при доставке@newline- @key",
+  "I need a @key for a @key I'm making. Could someone bring me one?@newline        -@key@newline@newline- @numberg on delivery@newline- @key": "Мне нужен @key, что бы приготовить @key. Кто-нибудь может поделится со мной этим? @newline     -@key@newline@newline- @numberg при доставке@newline- @key",
+  "I need an @key for a @key I'm making. Could someone bring me one?@newline        -@key@newline@newline- @numberg on delivery@newline- @key": "Мне нужен @key, что бы приготовить @key. Кто-нибудь может поделится со мной этим? @newline     -@key@newline@newline- @numberg при доставке@newline- @key",
   "I have a craving for @key. Please bring one by for me.@newline       -@key@newline@newline- @numberg on delivery@newline- @key": "Я очень хочу получить @keyV. Пожалуйста, принеси мне 1 шт..@newline -@key@newline@newline- @numberg за доставку@newline- @key",
   "I have a craving for @key. @newline       -@key@newline@newline- @numberg on delivery@newline- @key": "Я очень хочу получить @keyV. Пожалуйста, принеси мне 1 шт..@newline -@key@newline@newline- @numberg за доставку@newline- @key",
   "Looking to dissect a @key. Please deliver to Demetrius at 24 Mountain Road.@newline@newline- @numberg on delivery@newline- @key": "Мне нужен @key для проведения экспериментов. Прошу доставить Деметрию по адресу Горная Дорога 24. @newline@newline- @numberg за доставку@newline- @key",
@@ -119,8 +119,8 @@
   "on my great-grandfather's tombstone": "положить на надгробие моего прадеда",
   "Looking for a @key to make into buttons for a dress@newline I'm making. If you find one could you bring it to me?.@newline     -Emily@newline@newline- @numberg on delivery@newline- @key": "Ищу @key что бы сделать из этого пуговицу@newline для одежды что я шью. Можете принести мне?@newline -Эмили@newline@newline- @numberg за доставку@newline- @key",
   "Looking for an @key to make into buttons for a dress@newline I'm making. If you find one could you bring it to me?.@newline     -Emily@newline@newline- @numberg on delivery@newline- @key": "Ищу @key что бы сделать из этого пуговицу@newline для одежды что я шью. Можете принести мне?@newline -Эмили@newline@newline- @numberg за доставку@newline- @key",
-  "Hello, it's Emily. I'd like to buy a @key from someone,@newlineto craft into some fine jewelry. Thanks!@newline@newline- @numberg on delivery@newline- @key": "Привет, это от Эмили. Я бы  у кого нибудь купила @key, @newline что бы сделать из этого украшение. Спасибо! @newline@newline- @numberg за доставку@newline- @key",
-  "Hello, it's Emily. I'd like to buy an @key from someone,@newlineto craft into some fine jewelry. Thanks!@newline@newline- @numberg on delivery@newline- @key": "Привет, это от Эмили. Я бы у кого нибудь купила @key, @newline что бы сделать из этого украшение. Спасибо! @newline@newline- @numberg за доставку@newline- @key",
+  "Hello, it's Emily. I'd like to buy a @key from someone,@newlineto craft into some fine jewelry. Thanks!@newline@newline- @numberg on delivery@newline- @key": "Привет, это от Эмили. Я бы  у кого-нибудь купила @key, @newline что бы сделать из этого украшение. Спасибо! @newline@newline- @numberg за доставку@newline- @key",
+  "Hello, it's Emily. I'd like to buy an @key from someone,@newlineto craft into some fine jewelry. Thanks!@newline@newline- @numberg on delivery@newline- @key": "Привет, это от Эмили. Я бы у кого-нибудь купила @key, @newline что бы сделать из этого украшение. Спасибо! @newline@newline- @numberg за доставку@newline- @key",
   "@key is in need of a @key@newline@newline- @numberg on delivery@newline- @key": "@keyD нужен @key@newline@newline- @numberg за доставку@newline- @key",
   "@key is in need of an @key@newline@newline- @numberg on delivery@newline- @key": "@keyD нужен @key@newline@newline- @numberg за доставку@newline- @key",
   "Looking for a @key          -@key@newline@newline- @numberg on delivery@newline- @key": "Ищу@key -@key@newline@newline- @numberg за доставку@newline- @key",
@@ -137,17 +137,17 @@
   ". Could someone bring me an @key? . I could use one.@newline          -@key@newline@newline- @numberg on delivery@newline- @key": "Может кто-нибудь принести мне @keyV? . Я могу использовать 1 шт.@newline -@key@newline@newline- @numberg за доставку@newline- @key",
   ". Could someone bring me a @key? @newline          -@key@newline@newline- @numberg on delivery@newline- @key": "Может кто-нибудь принести мне @keyV? @newline          -@key@newline@newline- @numberg за доставку@newline- @key",
   ". Could someone bring me an @key? @newline          -@key@newline@newline- @numberg on delivery@newline- @key": "Может кто-нибудь принести мне @keyV? @newline -@key@newline@newline- @numberg за доставку@newline- @key",
-  "Does anyone have an extra @key laying around?  -@key@newline@newline- @numberg on delivery@newline- @key": "Может у кого нибудь завалялся лишний @key? -@key@newline@newline- @numberg за доставку@newline- @key",
-  "Does anyone have an extra @key?  -@key@newline@newline- @numberg on delivery@newline- @key": "Может у кого нибудь есть лишний @key? -@key@newline@newline- @numberg за доставку@newline- @key",
-  "I need a @key, if It's not too inconvenient. @newline          -@key@newline@newline- @numberg on delivery@newline- @key": "Мне хотелось бы получить @key, если кого нибудь не затруднит принесите мне.@newline -@key@newline@newline- @numberg за доставку@newline- @key",
-  "I need an @key, if It's not too inconvenient. @newline          -@key@newline@newline- @numberg on delivery@newline- @key": "Мне хотелось бы получить @key, если кого нибудь не затруднит принесите мне.@newline -@key@newline@newline- @numberg за доставку@newline- @key",
+  "Does anyone have an extra @key laying around?  -@key@newline@newline- @numberg on delivery@newline- @key": "Может у кого-нибудь завалялся лишний @key? -@key@newline@newline- @numberg за доставку@newline- @key",
+  "Does anyone have an extra @key?  -@key@newline@newline- @numberg on delivery@newline- @key": "Может у кого-нибудь есть лишний @key? -@key@newline@newline- @numberg за доставку@newline- @key",
+  "I need a @key, if It's not too inconvenient. @newline          -@key@newline@newline- @numberg on delivery@newline- @key": "Мне хотелось бы получить @key, если кого-нибудь не затруднит принесите мне.@newline -@key@newline@newline- @numberg за доставку@newline- @key",
+  "I need an @key, if It's not too inconvenient. @newline          -@key@newline@newline- @numberg on delivery@newline- @key": "Мне хотелось бы получить @key, если кого-нибудь не затруднит принесите мне.@newline -@key@newline@newline- @numberg за доставку@newline- @key",
   "I'm running low on @key. If someone could bring me one, @newlineit would be much appreciated.  -@key@newline@newline- @numberg on delivery@newline- @key": "У меня подходит к концу запас @keyR. Если кто-нибудь сможет мне принести хотя бы немного, @newline получит мою благодарность. -@key@newline@newline- @numberg за доставку@newline- @key ",
   "I need a @key to rub on my sore @key. Please bring one as soon as you can!@newline          -@key@newline@newline- @numberg on delivery@newline- @key": "Мне нужен @key, что бы унять боль в @keyP. Пожалуйста принесите мне как можно скорее!@newline -@key@newline@newline- @numberg за доставку@newline- @key",
   "I need an @key to rub on my sore @key. Please bring one as soon as you can!@newline          -@key@newline@newline- @numberg on delivery@newline- @key": "Мне нужен @key, что бы унять боль в @key. Пожалуйста принесите мне как можно скорее!@newline -@key@newline@newline- @numberg за доставку@newline- @key",
   "I need a @key to rub on my sore @key. Please bring one ASAP!!@newline          -@key@newline@newline- @numberg on delivery@newline- @key": "Мне нужен @key, что бы унять боль в @key. Пожалуйста принесите мне их как можно скорее!@newline -@key@newline@newline- @numberg за доставку@newline- @key",
   "I need an @key to rub on my sore @key. Please bring one ASAP!!@newline          -@key@newline@newline- @numberg on delivery@newline- @key": "Мне нужен @key, что бы унять боль в @key. Пожалуйста принесите КТТС!@newline -@key@newline@newline- @numberg за доставку@newline- @key",
-  "@key would like to hire someone to fetch a @key. You will be paid for your time.@newline@newline- @numberg on delivery@newline- @key": "@key наймёт кого нибудь, что бы принести @key. Ваше потраченное время будет компенсировано.@newline@newline- @numberg за доставку@newline- @key",
-  "@key would like to hire someone to fetch an @key. You will be paid for your time.@newline@newline- @numberg on delivery@newline- @key": "@key наймёт кого нибудь, что бы принести @key. Ваше потраченное время будет компенсировано.@newline@newline- @numberg за доставку@newline- @key",
+  "@key would like to hire someone to fetch a @key. You will be paid for your time.@newline@newline- @numberg on delivery@newline- @key": "@key наймёт кого-нибудь, что бы принести @key. Ваше потраченное время будет компенсировано.@newline@newline- @numberg за доставку@newline- @key",
+  "@key would like to hire someone to fetch an @key. You will be paid for your time.@newline@newline- @numberg on delivery@newline- @key": "@key наймёт кого-нибудь, что бы принести @key. Ваше потраченное время будет компенсировано.@newline@newline- @numberg за доставку@newline- @key",
   "Buying 1 @key at twice the market value! Please deliver directly to me     -@key@newline@newline- @numberg on delivery@newline- @key": "Куплю 1 @key по рыночной цене двух! Только  пожалуйста несите сразу ко мне -@key@newline@newline- @numberg за доставку@newline- @key",
   "Buying 1 @key at twice the market value! Please deliver directly into my hands.     -@key@newline@newline- @numberg on delivery@newline- @key": "Куплю 1 @key по рыночной цене двух! Только пожалуйста несите сразу ко мне -@key@newline@newline- @numberg за доставку@newline- @key",
   "Bring @key a @key": "Принести @keyD @key",
@@ -183,9 +183,9 @@
   "I will < you forever if you bring me a @key!@newline    -Haley@newline@newline- @numberg on delivery@newline- @key": "Я буду < тебя вечно, если принесёшь мне @key!@newline -Хейли@newline@newline- @numberg за доставку@newline- @key",
   "I will < you forever if you bring me an @key!@newline    -Haley@newline@newline- @numberg on delivery@newline- @key": "Я буду < тебя вечно, если принесёшь мне @key!@newline -Хейли@newline@newline- @numbergза доставку@newline- @key",
   "Oh! That's exactly what I needed! Heehee! I'm so happy!": "Ох! Это именно то, что мне нужно! Я так счастлива!",
-  "I would like a cute girl to bring me a @key.  (": "Я бы хотел, чтобы какая нибудь милая девушка принесла мне @key. (",
+  "I would like a cute girl to bring me a @key.  (": "Я бы хотел, чтобы какая-нибудь милая девушка принесла мне @key. (",
   "_-)@newline      -Sam@newline@newline- @numberg on delivery@newline- @key": "_-)@newline -Сэм@newline@newline- @numberg за доставку@newline- @key",
-  "I would like a cute girl to bring me an @key.  (": "Я бы хотел, чтобы какая нибудь милая девушка принесла мне @key. (",
+  "I would like a cute girl to bring me an @key.  (": "Я бы хотел, чтобы какая-нибудь милая девушка принесла мне @key. (",
   "_-)@newline      -Sam@newline@newline- @numberg on delivery@newline- @key": "_-)@newline -Сэм@newline@newline- @numberg за доставку@newline- @key",
   "Looking for a buddy to bring me a @key.@newine       -Sam@newline@newline- @numberg on delivery@newline- @key": "Ищу приятеля который принесёт мне @key.@newine -Сэм@newline@newline- @numberg за доставку@newline- @key",
   "Looking for a buddy to bring me an @key.@newine       -Sam@newline@newline- @numberg on delivery@newline- @key": "Ищу приятеля который принесёт мне @key.@newine -Сэм@newline@newline- @numberg за доставку@newline- @key",
@@ -202,8 +202,8 @@
   "Thank you!": "Спасибо тебе!",
   "I want to pull a prank on my Dad. I'll need a @key. Keep it secret :)@newline      -Abigail@newline@newline- @numberg on delivery@newline- @key": "Я хочу разыграть своего отца. Для этого мне требуется @key. Держите в секрете :)@newline -Эбигейл@newline@newline- @numberg за доставку@newline- @key",
   "I want to pull a prank on my Dad. I'll need an @key. Keep it secret :)@newline      -Abigail@newline@newline- @numberg on delivery@newline- @key": "Я хочу разыграть своего отца. Для этого мне требуется @key. Держите в секрете :)@newline -Эбигейл@newline@newline- @numberg за доставку@newline- @key",
-  "Bored... could someone bring me a @key?@newline    -Abby@newline@newline- @numberg on delivery@newline- @key": "Скучно... может кто нибудь принести мне @key?@newline -Эбби@newline@newline- @numberg за доставку@newline- @key",
-  "Bored... could someone bring me an @key?@newline    -Abby@newline@newline- @numberg on delivery@newline- @key": "Скучно... может кто нибудь принести мне @key?@newline -Эбби@newline@newline- @numberg за доставку@newline- @key",
+  "Bored... could someone bring me a @key?@newline    -Abby@newline@newline- @numberg on delivery@newline- @key": "Скучно... может кто-нибудь принести мне @key?@newline -Эбби@newline@newline- @numberg за доставку@newline- @key",
+  "Bored... could someone bring me an @key?@newline    -Abby@newline@newline- @numberg on delivery@newline- @key": "Скучно... может кто-нибудь принести мне @key?@newline -Эбби@newline@newline- @numberg за доставку@newline- @key",
   "Hmm... this isn't as exciting as I thought it would be...": "Хмм... это было не так интересно как я думала..",
   "But that's not your fault! Haha. Thanks for responding to my bulletin, @player.": "Но это не твоя вина! Хаха. Спасибо что ответил на мою заявку,  @player.",
   "Heh heh... perfect. Here's your reward, @player. Don't say a word to my Dad. ": "Хехехе... отлично. Вот твоя награда, @player. Не говори ни слова моему папе. ",
@@ -222,7 +222,7 @@
   "Journal Updated": "Дневник обновлен ",
   "__comment": "ResourceCollectionQuest.cs",
   "Gathering": "Собрано",
-  "Hello! It's Robin. Could someone bring me @number pieces of @key? They need to be fresh... that means gathered today. Thanks!": "Привет! Это Робин. Мне требуются @key в количестве @number штук. Может кто нибудь принести? Они должны быть свежими... сорванными в этот же день. Заранее спасибо!",
+  "Hello! It's Robin. Could someone bring me @number pieces of @key? They need to be fresh... that means gathered today. Thanks!": "Привет! Это Робин. Мне требуются @key в количестве @number штук. Может кто-нибудь принести? Они должны быть свежими... сорванными в этот же день. Заранее спасибо!",
   "Hey, looks like you got the lumber I asked for.@key": "Эй, похоже у тебя есть дерево о котором я просила.@key",
   "Hey, looks like you got the stone I asked for.@key": "Эй, похоже у тебя есть камень о котором я просила.@key",
   "Wonderful!": "Замечательно!",
@@ -287,7 +287,7 @@
   "Frost Jellie": "Морозный слизень",
   "__comment": "SocializeQuest.cs",
   "Saying 'Hello'": "Сказать 'Привет'",
-  "Hey! Will someone say 'Hi' to everyone in town for me? I want to spread a message of @key today!   -Emily@newline@newline- Everyone will like you a little more": "Хей! Кто нибудь передаст привет от меня всем в городе? Я хочу сегодня распространить @key!-Эмили@newline@newline- Все станут любить тебя немножко больше.",
+  "Hey! Will someone say 'Hi' to everyone in town for me? I want to spread a message of @key today!   -Emily@newline@newline- Everyone will like you a little more": "Хей! Кто-нибудь передаст привет от меня всем в городе? Я хочу сегодня распространить @key!-Эмили@newline@newline- Все станут любить тебя немножко больше.",
   "pure joy": "нотки чистой радости",
   "peace & goodwill": "весть мира и добра",
   "community spirit": "дух содружества",
