--- a/MultiLanguage/languages/RU/dictionaries/_KeyWords.json
+++ b/MultiLanguage/languages/RU/dictionaries/_KeyWords.json
@@ -405,9 +405,9 @@
   "skyblue": "небесно-голубой",
   "bubblegumpink": "насыщено розовый",
   "bloodred": "кроваво-красный",
-  "brightorange": "ярко-оранжеевый",
+  "brightorange": "ярко-оранжевый",
   "naquamarine": "аквамариновый",
-  "silvery": "серебряный",
+  "silvery": "серебристый",
   "glimmeringgold": "сверкающий золотом",
   "rainbow": "радужный",
   "__comment Dialogues features": "__comment Dialogues features",
