--- a/MultiLanguage/languages/RU/dictionaries/_Menus.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Menus.json
@@ -59,12 +59,12 @@
   "Items Shipped (Farm & Forage)": "Продано предметов (Ферма и добытое)",
   "Total Found: @number": "Всего найдено: @number",
   "Times Cooked: @number": "Приготовлено раз: @number",
-  "Number Caught: @number": "Поймано раз: @number",
+  "Number Caught: @number": "Всего поймано: @number",
   "Biggest Catch: @number in.": "Наибольший улов: @number д.",
-  "Number Found: @number": "Кол-во найдено: @number",
-  "Number Shipped: @number": "Кол-во продано: @number",
+  "Number Found: @number": "Всего найдено: @number",
+  "Number Shipped: @number": "Всего продано: @number",
   "Join Valley": "Вступить в Долину",
-  "Host Valley": "Хозяин Долины",
+  "Host Valley": "Создать Долину",
   "No response": "Не отвечает",
   "ghosted": "призрак",
   "Journal (@key)": "Дневник (@key)",
@@ -364,8 +364,8 @@
   "Watch TV shows to learn useful tips, cooking recipes, and more!": "Смотрите шоу по ТВ, чтобы узнать полезные советы, новые рецепты, и многое другое!",
   "The traveling merchant visits Stardew Valley once a week. She sells a wide variety of goods, often at exorbitant prices!": "Путешествующий торговец посещает Долину Стардью раз в неделю. Она продает широкий ассортимент товаров, часто по завышенным ценам!",
   "Thanks for playing!": "Спасибо за игру!",
-  "Elliott's latest sentence: @newline The @key @key @key @key the other @key": "Последнее предложение Эллиотта: @newline @key @key @key @key и другой @key",
-  "Elliott's latest sentence: @newline The @key @key @key @key the @key": "Последнее предложение Эллиотта: @newline @key @key @key @key и  @key",
+  "Elliott's latest sentence:@newlineThe @key @key @key @key the other @key": "Последнее предложение Эллиотта: @newline @key @key @key @key и другой @key",
+  "Elliott's latest sentence:@newlineThe @key @key @key @key the @key": "Последнее предложение Эллиотта: @newline @key @key @key @key и  @key",
   "Challenge: Beat Journey Of The Prairie King without dying.": "Испытание: Пройдите Приключение Короля прерий ни разу не умерев.",
   "New": "Новая",
   "Load": "Загрузить",
@@ -379,8 +379,10 @@
   "(single)": "(без пары)",
   "(boyfriend)": "(парень)",
   "(girlfriend)": "(девушка)",
+  "(wife)": "(жена)",
+  "(husband)": "(муж)",
   "This change will not take effect until you restart the game": "Это изменеие вступит в силу только после перезагрузки игры",
   "Exhausted": "Истощение",
-  "Jukebox": "Проигрыватель",
+  "Jukebox": "Музыкальный автомат",
   "- @key - @key": "- @key - @key"
 }
