--- a/MultiLanguage/languages/RU/dictionaries/_NPC.json
+++ b/MultiLanguage/languages/RU/dictionaries/_NPC.json
@@ -92,7 +92,7 @@
   "*sigh*... my skin looks horrible today.": "*вздох* ...Моя кожа сегодня ужасно выглядит.",
   "*sigh*... my hair looks horrible today.": "*вздох* У меня сегодня жуткая причёска...",
   "It does... I can tell by the way you're looking at me.": "Это правда... Я могу это определить по тому, как ты на меня смотришь.",
-  "Don't you ever feel trapped?": "Никогда не чувствовал себя как в ловушке?^Никогда не чувствовала себя как в ловушке?^",
+  "Don't you ever feel trapped?": "Никогда не чувствовал себя как в ловушке?^Никогда не чувствовала себя как в ловушке?",
   "*grumble*... chores...": "*ворчание*... хлопоты...",
   "Don't you have work to do?": "Тебе разве нечем заняться?",
   "Nghh... what is it? I'm trying to sleep.": "Нгхх... ну что еще? Я вообще-то пытаюсь уснуть.",
