--- a/MultiLanguage/languages/RU/dictionaries/_Object.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Object.json
@@ -134,10 +134,10 @@
   "Copper Pickaxe": "Медная Кирка",
   "Copper Hoe": "Медная Мотыга",
   "Copper Axe": "Медный Топор",
-  "Iron Watering Can": "Железная Лейка",
-  "Iron Pickaxe": "Железная Кирка",
-  "Iron Hoe": "Железная Мотыга",
-  "Iron Axe": "Железный Топор",
+  "Steel Watering Can": "Стальная Лейка",
+  "Steel Pickaxe": "Стальная Кирка",
+  "Steel Hoe": "Стальная Мотыга",
+  "Steel Axe": "Стальной Топор",
   "Gold Watering Can": "Золотая Лейка",
   "Gold Pickaxe": "Золотая Кирка",
   "Gold Hoe": "Золотая Мотыга",
