--- a/MultiLanguage/languages/RU/dictionaries/_TBinStrings.json
+++ b/MultiLanguage/languages/RU/dictionaries/_TBinStrings.json
@@ -7,7 +7,7 @@
   "You dig around in Marnie's private drawer. There's nothing of interest.": "Вы копаетесь в туалетном столике Марни. Там разные мелочи - ничего интересного.",
   "Looks like he's using the radio as an alarm clock.": "Похоже, радио служит ему будильником.",
   "Jack-in-the-box is sprawled out, his arms bent at grotesque angles. His hollow eyes peer coldly into the distance.": "Чёртик из табакерки лежит, гротескно раскинув руки. Его впалые глаза холодно смотрят вдаль.",
-  "It's a Mega Station. There's a game in it, but it's routed through a Code Sultan XL. Looks like someone's been cheating.": "Это консоль \"МЕГА\". В ней есть игра, но она подключена к декодеру \"Султан XL\". Кто-то явно жульничает.",
+  "It's a Mega Station. There's a game in it, but it's routed through a Code Sultan XL. Looks like someone's been cheating.": "Это консоль \"МЕГА\". В ней есть игра, только она подключена через декодер \"Султан XL\". Кто-то явно жульничает.",
   "How To Raise Chickens": "Пособие по выращиванию цыплят",
   "It's a mess of arts and crafts.": "Разные картинки и фигурки.",
   "It doesn't look used. Maybe it's a collecter's ball.": "С виду новый. Возможно коллекционный.",
@@ -33,7 +33,7 @@
   "This locker smells awful.": "Ну и вонь!",
   "Trying to shower with your clothes on?": "В одежде мыться собрались?",
   "You're too weak to lift it.": "Вам не хватает сил её поднять.",
-  "Alex's Locker... There's a bunch of pictures of bodybuilders taped inside the door.": "Шкафчик Алекса... Изнутри, вся дверь оклеена фотографиями бодибилдеров.",
+  "Alex's Locker... There's a bunch of pictures of bodybuilders taped inside the door.": "Шкафчик Алекса... Изнутри, вся дверь оклеена фотографиями качков.",
   "__comment BathHouse_WomensLocker.tbin": "__comment BathHouse_WomensLocker.tbin",
   "Items for women.": "Разные предметы женской гигиены.",
   "It's Penny's locker. There's a frilly bathing suit inside.": "Шкафчик Пенни. Внутри купальник с милыми оборками.",
@@ -59,14 +59,14 @@
   "It's a painting by Leah.": "Картина Лии.",
   "Elliott's work desk. It's covered in notes and crumpled papers.": "Письменный стол Элиота. На нём полно записок и скомканных листов.",
   "It's an empty cubby.": "Пустая каморка.",
-  "It looks like Elliott is trying to grow a bonsai tree. It looks cool so far!": "Элио пробует выращивать бонсай. Неплохо выглядит!",
+  "It looks like Elliott is trying to grow a bonsai tree. It looks cool so far!": "Элиот пробует выращивать бонсай. Неплохо выглядит!",
   "It's a mini-palm, imported from Calico Desert.": "Мини-пальма, привезенная из пустыни Калико.",
   "__comment Farm.tbin": "__comment Farm.tbin",
   "Grandpa's Shrine": "Дедушкино святилище",
   "Mailbox": "Почтовый ящик",
   "__comment FishShop.tbin": "__comment FishShop.tbin",
   "It leads up to a little sleeping cubby. It's off limits": "Она ведёт в каморку наверху. Там закрыто.",
-  "It's a tackle box. It's full of lures, bobbers, hooks, and fishing line.": "Коробка со снастями. Тут полно приманок, поплавков, крючков и лески.",
+  "It's a tackle box. It's full of lures, bobbers, hooks, and fishing line.": "Коробка со снастями. Заполнена приманками, поплавками, крючками и леской.",
   "Miniature model of a frigate.": "Миниатюрная модель фригата.",
   "There's little pink shrimping moving around in there.": "Там маленькие розовые креветки.",
   "Well, it's a bin full of writhing, wriggling worms. It smells something awful.": "А это корзина с червями. Здорово воняет.",
@@ -96,7 +96,7 @@
   "To our beloved girls:^We miss you and hope that you are doing okay on your own. We just left the Fern Islands last night, after staying for two months.^It was a wonderful experience... highly recommended.^Make sure you eat healthy and don't forget to pay the electricity bill!^^Love, Mom & Dad": "Милые наши девочки:^Мы очень соскучились и надеемся, что у вас всё хорошо. Мы два месяца отдыхали на Папоротниковых островах, вернулись только прошлой ночью.^Масса впечатлений... Вам определённо стоит там побывать!^Не забывайте правильно питаться и оплачивать электричество!^^С любовью, мама и папа",
   "'Super Fashion Girl' magazine": "Журнал \"Стильная модница\"",
   "__comment HarveyRoom.tbin": "__comment HarveyRoom.tbin",
-  "A comparison between fighter planes of the Ferngill Republic and the Gotoro Empire.": "Сравнение истребителей Республики Фернжил и Империи Готоро.",
+  "A comparison between fighter planes of the Ferngill Republic and the Gotoro Empire.": "Сравнение истребителей Республики Фернжил и Империи Готоро",
   "There's a beautiful view of the sky above Stardew Valley.": "Прекрасный вид на небо долины Стардью.",
   "It's Harvey's model airplane collection.": "Коллекция самолётов Харви.",
   "It's a complicated radio broadcasting set.": "Сложный набор для радиовещания.",
@@ -125,7 +125,7 @@
   "Protein bars": "Протеиновый батончик",
   "Sugar-Free Lollipop": "Леденец без сахара",
   "24-grain bread": "Хлеб из 24 злаков",
-  "'Maypul' Syrup": "'Кленовый' сироп",
+  "'Maypul' Syrup": "\"Кленовый\" сироп",
   "Hair Gel -- Electric Blue": "Электрический синий -- Гель для волос",
   "Granny's sauce": "Бабушкин соус",
   "Canned soup": "Консервированный суп",
@@ -154,12 +154,12 @@
   "Pesto": "Соус \"Песто\"",
   "Yeast": "Дрожжи",
   "Protein powder": "Белковый порошок ",
-  "Cocoa Zeppelins": "Шоколадные дирижабли",
+  "Cocoa Zeppelins": "Шоколадные цеппелины",
   "Oat bread": "Овсяный хлеб",
-  "Synthetic Butter -- It's cheap!": "Синтетическое масло  -- это дешево!",
+  "Synthetic Butter -- It's cheap!": "Синтетическое масло -- Дёшево!",
   "Mouthwash": "Ополаскиватель для рта",
   "Take-Me-To-The-Emergency-Room sauce": "Соус \"Реаниматор\" - взбодрит и мёртвого!",
-  "Dehydrated shrimp snack.": "Закуска из сушеных креветок.",
+  "Dehydrated shrimp snack.": "Закуска из сушеных креветок",
   "Sugar cane chips": "Чипсы из сахарного тростника",
   "Sugar cones": "Сахарные головы",
   "Powdered breakfast -- Just add water. (Eggs & Potatoes)": "Сухой завтрак - просто добавь воды! (Картошка с яйцами)",
@@ -201,7 +201,7 @@
   "JojaMeal... It's like corn meal but more versatile. It can be used for baking, thickening and sweetening. Mix it with water to make our signature gravy.": "Joja-мука - похожа на кукурузную, но более универсальна. Подходит для выпечки, кляров и соусов. Добавьте в неё воды и получите нашу фирменную подливку!",
   "Carbo cones. Tasty little cone-shaped snacks that will fill your stomach bag.": "Углеводные колпачки. Вкусные печенья-колпачки быстро уталят ваш голод.",
   "Cowboy sauce": "Ковбойский соус",
-  "Vacuum-sealed marinated mushrooms": "Маринованные грибы под вакуумом",
+  "Vacuum-sealed marinated mushrooms": "Маринованные грибы в вакуумной упаковке",
   "Canned meals": "Консервированные обеды",
   "JojaCola AMPED": "Joja-Кола: В ОТРЫВ!",
   "Blue-Green sugar orbs": "\"Морские камешки\" (синие и зелёные)",
@@ -210,7 +210,7 @@
   "Laundry Detergent": "Стиральный порошок",
   "Hot sauce": "Острый соус",
   "Pasta in a can.": "Консервированные спагетти",
-  "Corn flour.": "Кукурузная мука.",
+  "Corn flour.": "Кукурузная мука",
   "__comment JoshHouse.tbin": "__comment JoshHouse.tbin",
   "Momma-^If you're reading this, it means I've passed on. I'm so sorry you had to go through this. Know that I love you both.^Don't be too upset, I'm with Yoba now. ^My final request: take care of Alex. He needs a family, something stable. He's a good kid.^ Love, ^Clara": "Мама-^Если ты это читаешь, значит меня больше нет. Прости, что заставила тебя такое пережить. Просто знай: я очень люблю вас обоих.^И постарайся сильно не расстраиваться - Йоба обо мне позаботится. ^Моя последняя воля: воспитай Алекса. Ему нужна семья, основа. Он хороший мальчик.^ С любовью, ^Клара",
   "The radio is set to the oldies station.": "Радио настроено на станцию ретро-музыки.",
@@ -240,7 +240,7 @@
   "A traditional tea setting. The mayor must be pretty serious about tea.": "Набор для традиционной чайной церемонии. Похоже, мэр серьёзно относится к чаепитию.",
   "Won't you come by tomorrow night?^If you come through the back window no one will notice.^I'd like to see you more often.^I know you're busy but can't you make time for me?^I hope to see you tomorrow.^-M": "Заглянешь завтра ночью?^Если зайдёшь через заднее окно - тебя никто не заметит.^Я хочу почаще с тобой видиться.^Знаю, ты очень занят, но может выделишь мне пару часиков?^Жду тебя завтра.^-М",
   "__comment Mountain.tbin": "__comment Mountain.tbin",
-  "` Railroad": "` ЖД",
+  "` Railroad": "` Железная дорога",
   "__comment Saloon.tbin": "__comment Saloon.tbin",
   "There's a half-empty mug of beer.": "Полкружки пива.",
   "Cooking channel. 24/7 cooking tips, game shows, and restaurant reviews.": "Кулинарный канал. Советы, секреты, кулинарные шоу и обзоры ресторанов.",
@@ -284,7 +284,7 @@
   "'11 Solo Sonatas For The Wooden Flute'": "\"11 сольных сонат для деревянной флейты\"",
   "David the Guinea Pig": "Морская свинка Дэвид",
   "Hey, don't even think about it! That's private!": "Эй, даже не думай! Там личные вещи!",
-  "It's full of clothes... wait. There's a sword hidden under the clothes.": "Тут полно одежды... погодите-ка: под одеждой спрятан настоящий меч!",
+  "It's full of clothes... wait. There's a sword hidden under the clothes.": "Тут полно одежды... Погодите-ка: под одеждой спрятан настоящий меч!",
   "'The Enduring Value Of Small Business'": "\"Непреходящее значение малого бизнеса\"",
   "'Parenting 101:Surviving The Teenage Years'": "\"101 совет по воспитанию: Переживаем подростковый период\"",
   "It's loaded with fresh veggies.": "Тут полно свежих овощей.",
