--- a/MultiLanguage/languages/RU/dictionaries/_Utility.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Utility.json
@@ -5,10 +5,10 @@
   "he's worked hard on his farm,": "он усердно работал на своей ферме,",
   "made significant contributions to the field of archaeology,": "внес значительный вклад в археологию,",
   "has been a big help around town,": "оказал помощь всему городу,",
-  "has come to be loved by many residents,": "стал любимым многими жителями,",
+  "has come to be loved by many residents,": "полюбился многим жителям,",
   "has become a local fishing legend,": "стал местной рыболовной легендой,",
-  "has explored the shadowy depths of the local mine,": "исследовал темные глубины шахт,",
-  "and has earned over @numberg in revenue.": "и заработал более @numberg дохода.",
+  "has explored the shadowy depths of the local mine,": "исследовал тёмные глубины местной шахты,",
+  "and has earned over @numberg in revenue.": "и заработал более @numberg.",
   "__comment": "Game1.player.songsHeard.Add",
   "Bouncy": "Bouncy",
   "Wonky Tonk": "Wonky Tonk",
@@ -35,12 +35,12 @@
   "Credits:@newline @newline@newline@newlineProgramming,@newlineArt, Music,@newlineSound Effects, Writing:@newline@newline-Eric Barone@newline@newline@newline@newlineSpecial Thanks:@newline@newline-Amber Hageman@newline-Shane Waletzko@newline-Fiddy, Nuns, Kappy &@newlineeveryone from HarvestCraft@newline-Trader Joe's Organic Hummus@newline@newline@newline@newlineThanks for playing! :)": "Титры:@newline @newline@newline@newlineПрограммирование,@newlineДизайн, Музыка,@newlineЗвуковые эффекты, Сценарий:@newline@newline-Eric Barone@newline@newline@newline@newlineОтдельное спасибо:@newline@newline-Amber Hageman@newline-Shane Waletzko@newline-Fiddy, Nuns, Kappy &@newlineвсем из HarvestCraft@newline-Trader Joe's Organic Hummus@newline@newline@newline@newlineСпасибо, что играли! :)",
   "First Night": "Первая ночь",
   "The pages are too faded to read": "Страницы слишком нечеткие",
-  "Requires construction of a Coop": "Требуется строительство курятника",
-  "Requires construction of a Barn": "Требуется строительство сарая",
-  "Requires construction of a Big Barn": "Требуется строительство большого сарая",
-  "Requires construction of a Big Coop": "Требуется строительство большого курятника",
-  "Requires construction of a Deluxe Barn": "Требуется строительство роскошного сарая",
-  "Requires construction of a Deluxe Coop": "Требуется строительство роскошного курятника",
+  "Requires construction of a Coop": "Требуется курятник",
+  "Requires construction of a Barn": "Требуется хлев",
+  "Requires construction of a Big Barn": "Требуется большой хлев",
+  "Requires construction of a Big Coop": "Требуется большой курятник",
+  "Requires construction of a Deluxe Barn": "Требуется роскошный хлев",
+  "Requires construction of a Deluxe Coop": "Требуется роскошный курятник",
   "Dairy Cow": "Молочная корова",
   "__comment": "getSongTitleFromCueName",
   "Spring (It's A Big World Outside)": "Spring (It's A Big World Outside)",
@@ -116,23 +116,23 @@
   "Calico Desert": "Calico Desert",
   "Joja Office Ambience": "Joja Office Ambience",
   "__comment": "getWeddingEvent",
-  "When @player first arrived in Pelican Town, no one knew if he'd fit in with our community...": "Когда @player впервые прибыл в город Пеликан, никто не знал, будет ли он вписаться в наше общество...",
+  "When @player first arrived in Pelican Town, no one knew if he'd fit in with our community...": "Когда @player впервые прибыл в Пеликан-таун, никто не знал, сможет ли он вписаться в наше сообщество...",
   "But from this day forward, @player is going to be as much a part of this town as any of us!": "Но с этого дня, @player будет такой же частью этого города, как любой из нас!",
-  "It is my great honor on this day @number of @key, to unite @player and @key in the bonds of marriage.": "Для меня большая честь в этот день @number @key, объединить @player и @key узами брака.",
-  "When @player first arrived in Pelican Town, no one knew if she'd fit in with our community...": "Когда @player впервые прибыла в город Пеликан, никто не знал, будет ли она вписаться в наше общество...",
+  "It is my great honor on this day @number of @key, to unite @player and @key in the bonds of marriage.": "Для меня большая честь в этот день @number @key, связать @player и @key узами брака.",
+  "When @player first arrived in Pelican Town, no one knew if she'd fit in with our community...": "Когда @player впервые прибыла в Пеликан-таун, никто не знал, сможет ли она вписаться в наше сообщество...",
   "Well, let's get right to it!": "Ну, давайте сразу к делу!",
   "@player... @key...": "@player... @key...",
-  "As the mayor of pelican town, and regional bearer of the matrimonial seal, I now prounounce you husband and wife!": "Как мэр города Пеликан, и регионального обладателя супружеской печатью, Объявляю вас мужем и женой!",
-  "As the mayor of pelican town, and regional bearer of the matrimonial seal, I now prounounce you husband and ..., well, husband!": "Как мэр города Пеликан, и регионального обладателя супружеской печатью, Объявляю вас мужем и ... и мужем!",
-  "As the mayor of pelican town, and regional bearer of the matrimonial seal, I now prounounce you wife and husband!": "Как мэр города Пеликан, и регионального обладателя супружеской печатью, Объявляю вас женой и мужем!",
-  "As the mayor of pelican town, and regional bearer of the matrimonial seal, I now prounounce you wife and ..., well, wife!": "Как мэр города Пеликан, и регионального обладателя супружеской печатью, Объявляю вас женой и ... и женой!",
-  "You may kiss.": "Вы можете поцеловаться.",
+  "As the mayor of pelican town, and regional bearer of the matrimonial seal, I now prounounce you husband and wife!": "Как мэр Пеликан-тауна и местный хранитель брачной печати - объявляю вас мужем и женой!",
+  "As the mayor of pelican town, and regional bearer of the matrimonial seal, I now prounounce you husband and ..., well, husband!": "Как мэр Пеликан-тауна и местный хранитель брачной печати - объявляю вас мужем и... кхм... мужем!",
+  "As the mayor of pelican town, and regional bearer of the matrimonial seal, I now prounounce you wife and husband!": "Как мэр Пеликан-тауна и местный хранитель брачной печати - объявляю вас женой и мужем!",
+  "As the mayor of pelican town, and regional bearer of the matrimonial seal, I now prounounce you wife and ..., well, wife!": "Как мэр Пеликан-тауна и местный хранитель брачной печати - объявляю вас женой и... кхм... женой!",
+  "You may kiss.": "Можете поцеловать друг друга.",
   "Life is going to be different from now on...": "С этого момента ваша жизнь сильно измениться...",
-  "...But the future looks bright!": "...Но ваше будущее будет светлым!",
+  "...But the future looks bright!": "...Но, несомненно, в лучшую сторону!",
   "Didn't work - @key": "Не работает - @key",
   "__comment": "perpareDayForStardewCelebration",
   "Sorry, @player...": "Прости, @player...",
-  "Maybe in 'another life' you'll win...": "Может быть в 'другой жизни' ты выиграешь...",
+  "Maybe in 'another life' you'll win...": "Может быть в \"другой жизни\" выиграешь...",
   "@key won? I'm still shocked...": "@key выиграл? Я в шоке...",
   "Ugh... how in the world did @key win? That's awful.": "Тьфу.. как вообще @key мог победить? Это ужасно.^Тьфу.. как вообще @key могла победить? Это ужасно.",
   "Hmmph. They'd never give that award to an old timer like me.": "Хмпф. Они не когда не дадут награду старикам вроде меня.",
